# customer-support-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  customer_support_environment.py  knowledge_base.py  requirements.txt  tasks.py
static/: index.html
